'modify_template.html'

--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
    
 	<body>
 		<div>
-			<img src="dan.jpg" width="300px"/>
+			<img src="image/dan.jpg" width="300px"/>
 		</div>
 		</br>
 		<div>##CONTENT##</div>
