--- a/template.html
+++ b/template.html
@@ -1,6 +1,8 @@
 <html ng-app="myApp">
    <head>
-      <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
+		<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
    </head>
    
 	<body>
